--- a/BTVN/Pokemon/pokemon.css
+++ b/BTVN/Pokemon/pokemon.css
@@ -1,32 +1,35 @@
-body{
+*{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    height: 100vh;
+    background-color: #fff;
 }
-.pokemon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+.pokemon {
     font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    line-height:60px; 
-    font-size: 37.5px; 
-    color: #2C3E50; 
-    font-weight: 400;
-    padding-top: 50px;
-    padding-bottom: 50px;
+    font-size: 25px;
+    color: #2C3E50;
+    font-weight: 500;
+    margin-bottom: 50px;
 }
+
 .search {
     display: flex;
     justify-content: center;
-    padding: 20px;
-    width: 500px;
-    border: solid 1px rgb(100, 98, 98);
+    align-items: center;
+    padding: 12px 20px;
+    width: 450px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 30px;
-    box-shadow: #64646f33 0 7px 29px;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
+    background-color: white;
 }
 
 .search input {
@@ -34,4 +37,6 @@ body{
     border: none;
     outline: none;
     font-size: 16px;
+    color: #333;
+    background: transparent;
 }
