--- a/BTVN/Pokemon/pokemon.css
+++ b/BTVN/Pokemon/pokemon.css
@@ -14,7 +14,7 @@ body {
 
 .pokemon {
     font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    font-size: 25px;
+    font-size: 37.5px;
     color: #2C3E50;
     font-weight: 500;
     margin-bottom: 50px;
@@ -24,12 +24,14 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 12px 20px;
-    width: 450px;
+    padding: 20px;
+    width: 500px;
+    margin: 0 15px 50px;
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 30px;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
     background-color: white;
+
 }
 
 .search input {
@@ -39,4 +41,19 @@ body {
     font-size: 16px;
     color: #333;
     background: transparent;
+}
+.load{
+    padding-top: 50px;
+    width: 100%;
+    text-align: center;
+}
+.load_button{
+    cursor: pointer;
+    padding: 20px 25px;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #ff4d4f;
+    transition: all .25s cubic-bezier(.02,.01,.47,1);
 }
