--- a/BTVN/Landing Page/landingpage.css
+++ b/BTVN/Landing Page/landingpage.css
@@ -55,6 +55,7 @@ body {
     background-color: #222222;
     font-size:14px;
     height: 49px;
+    width: 100%;
     z-index: 10000;
 }
 .title1 {
@@ -150,6 +151,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
     flex-direction: row;
     white-space:nowrap;
     font-size: 14px;
@@ -288,7 +290,7 @@ body {
 .title3_1{
     display: flex;
     align-items: center;
-    padding: 6px 8px;
+    padding: 9px 8px;
     font-size: 14px;
     background-image: linear-gradient(to right, #8b1e1e, #e31c3d);
     border-radius: 3px;
@@ -635,10 +637,7 @@ body {
 .header4{
     display: none;
     position:absolute;
-    background: linear-gradient(to right, 
-        rgba(0, 0, 255, 0.621) 45%, 
-        #e31c3db7 55%,  
-        #e31c3db7 100%);
+    background: linear-gradient(90deg, #cd122d 0, #154284);
     height: 4px;
     width: 100%;
     z-index: 2000;
@@ -744,15 +743,19 @@ body {
     border-right: 1px solid hsla(0, 0%, 45%, .7);
 }
 .football_position {
-    padding: 24px 10px 0;
+    padding:24px 10px 0;
     position: relative;
+    text-align: center;
     height: 64px;
     z-index: 10;
     background-color: #fff;
     display:flex;
     align-items: center;
     justify-content: center;
-    overflow-x: auto; /* cho thanh di chuyển theo hướng ngang tùy chỉnh */ 
+    width: 100%;
+    white-space: nowrap;
+    gap: 10px;
+    overflow-x: auto;
 }
 .position{
     padding: 0 36px;
@@ -801,6 +804,7 @@ body {
     flex-direction: column;
     align-items: center;
     overflow:hidden;
+    aspect-ratio: 1 / 1;
 }
 .infor_coach{
     position:relative;
@@ -1037,12 +1041,12 @@ body {
     text-align: center;
     text-transform: uppercase;
     flex: 50%;
-    background-color: #ededed;
+    background-color: #EDEDED;
     margin-right: 1px;
     font-family: fcb-bold, Arial, Helvetica Neue, Helvetica, sans-serif;
     font-weight: 700;
 }
-.coaching_name, .coaching_role {
+.coaching_name {
     background-color: #f3f3f3;
     padding: 8px;
     display: flex;
@@ -1139,7 +1143,7 @@ body {
     display: block;
 }
 .main_partner_page{
-    padding: 0 16px 30px;
+    padding: 0 16px;
     margin-bottom: 24px;
 }
 .main_partner{
@@ -1151,21 +1155,23 @@ body {
     font-size: 12px;
     height: 14px;
     padding-top: 8px;
+    margin-left: 16px;
+    margin-right: 16px;
+    letter-spacing: 1px;
     line-height: 14px;
     color: #fdc52c;
 }
-.branch{
+.brand{
     display: flex;
     flex-direction: row;
     height: 112px;
     white-space: nowrap;
-    align-items: center;
-    justify-content: space-evenly;
+    justify-content: space-around;
     position: relative;
     top: 11px;
     padding: 0 16px;
 }
-.branch::before{
+.brand::before{
     position:absolute;
     top: 0;
     left: 0;
@@ -1174,16 +1180,28 @@ body {
     height: 100%;
     background-color: #fdc52c;
 }
-.branch_img {
-    display: flex;
-    width: 12%;
-    max-width: 12%;
+.brand_img {
+    display: flex; 
     justify-content: center;
-    position: relative; 
+    align-items: center;
+    position: relative;
     transition: border-bottom 0.3s ease; 
+    margin: 0 10%;
+}
+.nike{
+    width: 12%;
+    min-width: 12%;
+}
+.spotify{
+    width: 15%;
+    max-width: 15%;
+
+}
+.tv{
+    width: 20%;
 }
 
-.branch_img img {
+.brand_img img {
     margin: 16px 8px;
     max-width: 220px;  
     width: 100%;
@@ -1193,18 +1211,20 @@ body {
     align-items: center;
     object-fit: contain;
 }
-.branch_img::after {
+.brand_img::after {
     content: "";
     position: absolute;
     bottom: 0px;
-    left: 0;
-    width: 100%;
+    left: 50%;
+    right: 50%;
     height: 4px; 
     background-color: #fdc52c;
     opacity: 0;
-    transition: opacity 0.3s ease;
+    transition: left 0.3s ease, right 0.3s ease;
 }
-.branch_img:hover::after {
+.brand_img:hover::after {
+    left: 0;
+    right: 0;
     opacity: 1;
 }
 .fc-social_page{
@@ -1220,6 +1240,7 @@ body {
     margin: 32px 0 0;
     font-size: 18px;
     line-height: 27px;
+    white-space: nowrap;
     font-family: fcb-bold, Arial, Helvetica Neue, Helvetica, sans-serif;
     font-weight: 500;
 }
@@ -1233,7 +1254,7 @@ body {
     text-align: left;
     flex-wrap:nowrap;
     justify-content:center;
-    height: 112px;
+    height: auto;
 }
 .social-media_content{
     position: relative;
@@ -1281,15 +1302,18 @@ body {
     border-color: #FFFFFF;
 }
 .sitemap {
+    position:relative;
     display: flex;
     width: 100%;
     justify-content: space-around;
     text-align: left;
-    padding: 90.25px 16px 30px;
+    padding: 0 16px 30px;
+    margin: 16px 0 0;
 }
 .sitemap_content{
     display: flex;
     flex-direction:column;
+    flex: 1 0 auto;
 }
 .sitemap_title{
     color: #FFFFFF;
@@ -1297,13 +1321,18 @@ body {
     font-weight: 600;
     font-size: 18px;
     line-height: 22px;
-    margin-bottom: 30px;
+}
+.sitemap_list{
+    margin-top: 16px;
+    display: flex;
+    flex-direction:column;
 }
 .sitemap_content p{
     display: inline-block;
     font-family: fcb-light, Arial, Helvetica Neue, Helvetica, sans-serif;
     font-weight: 300;
     font-size: 14px;
+    width: 75%;
     line-height: 32px;
     margin-right: 10px;
     color: hsla(0, 0%, 100%, .75);
@@ -1395,10 +1424,12 @@ body {
     );
 }
 @media (max-width: 840px) {
+    body{
+        padding: 0 4px;
+    }
     .header1 {
         justify-content: flex-start;
         height: 57px;
-        padding-left: 10px; 
     }
     .title1 {
         align-items: flex-start;
@@ -1633,21 +1664,265 @@ body {
         font-size: 8px;
         line-height: 9px;
     }
-    .main_partner span::before,
-    .main_partner span::after {
-        content: ""; 
+    .main_partner span{
+        position:relative;
+        padding: 0 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .main_partner span::before{
+        content: "";
         position: absolute;
+        display: block;
         top: 50%;
-        width: 50px; /* Độ dài gạch */
-        height: 2px; /* Độ dày gạch */
-        background-color:#fdc52c; /* Màu gạch */
+        left: -24px;
+        background: #fdc52c;
+        width: calc(50% - 50px);
+        height: 2px;
+    }
+    .brand{
+        justify-content: space-around;
+    }
+    .main_partner span::after{
+        content: "";
+        position: absolute;
+        display: block;
+        top: 50%;
+        right: -24px;
+        background: #fdc52c;
+        width: calc(50% - 50px);
+        height: 2px;
+    }
+    .brand::before{
+        visibility:hidden;
+    }
+    .brand_img{
+        margin: 0 5%;
+        width: 20%;
+        max-width: 20%;
+    }
+    .brand_img img{
+        height: 80px;
+        width: auto;
+        max-width: 100%;
+    }
+    .nike{
+        width: 15%;
+        max-width: 15%;
+    }
+    .spotify{
+        width: 15%;
+        max-width: 15%;
+    }
+    .tv{
+        width: 15%;
+        max-width: 15%;
+    }
+    .brand_img:hover::after{
+        opacity:0;
     }
     .social-media{
         flex-wrap: wrap;
     }
+    .social-media_content{
+        height: 104px;
+        max-width: 209.51px;
+    }
+    .sitemap{
+        flex-wrap: wrap;
+        margin-top: 16px;
+        padding: 16px;
+        gap: 16px;
+    }
+    .corporate{
+        padding: 16px 16px 16px;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    .corporate_link{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+    }
+    .corporate_link_left{
+        font-size: 10px;
+    }
+    .corporate_link_right{
+        display: flex;
+        flex-direction: column;
+        border:none;
+        padding-top: 10px;
+    }
+    .corporate_link_item{
+        border:none;
+        font-size: 12px;
+    }
+    .corporate_link_item:hover{
+        text-decoration: none;
+    }
+    .corporate_link_item::after{
+        opacity: 0;
+    }
+    .footer{
+        left: -4px;
+        height: 8px;
+        width: 100vw;
+    }
 
 }
-@media (max-width: 600px) {
+@media (max-width: 340px) {
+    .header1{
+        padding: 0;
+    }
+    .it1{
+        display: none;
+    }
+    .it2{
+        display: none;
+    }
+    .header3_2{
+        overflow-x: scroll;
+    }
+    .big_barca{
+        height: 116px;
+        margin-top: 155px;
+    }
+    .big_barca h1{
+        white-space: normal;
+        font-size: 20px;
+        width: 80%;
+        line-height: 1.2;
+    }
+    .team-page_header p {
+        font-size: 12px;
+        letter-spacing: 0;
+        line-height: 20px;
+        padding-right: 10px;
+    }
+    .football_position{
+        justify-content: unset;
+    }
+    .football_position_section{
+        padding: 0 0 26px;
+    }
+    .position_title{
+        font-size: 22px;
+        margin: 0 0 16px;
+    }
+    .position_group{
+        gap: 10px;
+    }
+    .infor_footballer{
+        padding: 0;
+    }
+    .infor_coach{
+        padding: 0;
+        width: 100%;
+    }
+    .infor_footballer::after {
+        bottom: 0;
+        width: 100%;
+        height: 50%;
+    }
+    .infor_coach::after {
+        bottom: 0;
+        width: 100%;
+        height: 50%;
+    }
+    .infor_footballer-content{
+        top: 65%;
+    }
+    .infor_coach-content{
+        top: 80%;
+    }
+
+    .footballer_number{
+        line-height: 80px;
+    }
+    .footballer_position{
+        margin: 0;
+    }
+    .coach_position{
+        margin: 0;
+    }
+    .coaching_group{
+        padding-top: 30px;
+    }
+    .coaching-staff{
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 5px;
+        width: 100%;
+        height: 100%;
+    }
+    .coaching_role{
+        margin: 0 0 1px;
+        padding: 8px;
+        line-height: 1.5;
+    }
+    .coaching_name{
+        padding: 8px;
+    }
+    .cup_background{
+        margin: 4px;
+    }
+    .cup_name{
+        font-size: 8px;
+        white-space: normal;
+        text-align: center;
+        height: 24px;
+    }
+    .main_partner_page{
+        padding: 0;
+        margin: 0;
+    }
+    .brand{
+        padding:0;
+        justify-content: space-around;
+    }
+    .brand_img{
+        margin: 0;
+        padding: 0;
+    }
+    .brand_img img{
+        margin: 0;
+        padding: 0;
+    }
+    .social-media{
+        margin: 16px 0 24px;
+    }
+    .social-media_content {
+        height: 104px;
+        max-width: 126.95px;
+    }
+    .sitemap{
+        display: grid;
+        padding: 16px;
+        grid-gap: 16px;
+        grid-template-columns: repeat(2, calc(50% - 16px));
+    }
+    .sitemap_content{
+        max-width: 106.4px;
+    }
+    .sitemap_content p{
+        line-height: 24px;
+        width: 75%;
+        letter-spacing: 0.5px;
+    }
+    .corporate_link_left{
+        display:block;
+        white-space: normal;
+        line-height: 1.2;
+        font-size: 11px;
+        text-align: left;
+        align-items: flex-start;
+    }
+}
+/* @media (max-width: 600px) {
     .infor_footballer{
         width: 100%;
     }
@@ -1727,4 +2002,4 @@ body {
         font-size: 12px;
         margin: 0 20px;
     }
-}
+} */
