--- a/BTVN/Pokemon/pokemon.css
+++ b/BTVN/Pokemon/pokemon.css
@@ -4,22 +4,23 @@
     padding: 0;
 }
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
     height: 100vh;
     background-color: #fff;
+    margin: 50px auto;
+    max-width: 1200px;
 }
-
-.pokemon {
+.header{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+}
+.header-title {
     font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-size: 37.5px;
     color: #2C3E50;
     font-weight: 500;
     margin-bottom: 50px;
 }
-
 .search {
     display: flex;
     justify-content: center;
@@ -42,7 +43,94 @@ body {
     color: #333;
     background: transparent;
 }
+.main-content{
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.pokemon{
+    width: 16.66%;
+    padding: 10px 5px;
+    border-radius: 15px;
+    box-shadow: #0000001a 0 4px 12px;
+    transition: all .25scubic-bezier(.02,.01,.47,1);
+}
+.pokemon:hover {
+    box-shadow: 0 5px 11px #0000002e, 0 4px 15px #00000026;
+    -webkit-transition: box-shadow .4sease-out;
+    transition: box-shadow .4sease-out;
+}
+.card{
+    text-decoration: none;
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.pokemon-number{
+    line-height: 24px;
+    font-size: 15px;
+    color: #2C3E50;
+    font-family: Inter,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.pokemon-name{
+    font-family: Inter,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 17.55px;
+    line-height: 28.08px;
+    color: black;
+}
+.labels{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.label{
+    padding: 3px 4px;
+    border-radius: 5px;
+    margin: 0 3px;
+    font-size: 13px;
+    font-weight: 700;
+    font-size: 13px;
+    color:black;
+    line-height: 1.5;
+    font-family: Inter,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+    text-transform: capitalize;
+    box-shadow: #0000000d 0 6px 24px, #00000014 0 0 0 1px;
+}
+.label.grass{
+    background:#78cd54;
+}
+.label.poison {
+    background-color: #a33ea1;
+}
+.label.fire {
+    background-color: #ff421c;
+}
+.label.flying{
+    background-color: #a98ff3;
+}
+.label.water{
+    background-color: #6390f0;
+}
+.label.bug{
+    background-color: #a6b91a;
+}
+.label.normal{
+    background-color: #a8a77a;
+}
+.label.electric{
+    background-color: #f7d02c;
+}
+.label.ground{
+    background-color: #e2bf65;
+}
+.label.fairy{
+    background-color: #d685ad;
+}
 .load{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
     padding-top: 50px;
     width: 100%;
     text-align: center;
