--- a/BTVN/Pokemon/pokemon.css
+++ b/BTVN/Pokemon/pokemon.css
@@ -28,20 +28,23 @@ body {
     padding: 20px;
     width: 500px;
     margin: 0 15px 50px;
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    border-radius: 30px;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-    background-color: white;
-
 }
-
 .search input {
     width: 100%;
-    border: none;
-    outline: none;
     font-size: 16px;
+    padding: 20px;
+    padding: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    border-radius: 30px;
+    background-color: white;
+    outline: 1px solid #00000036;
+    box-shadow: #64646f33 0 7px 29px;
+    font-size: 16px;
+    transition: all .2s ease;
     color: #333;
-    background: transparent;
+}
+.search input:focus {
+    outline: 1px solid #000000;
 }
 .main-content{
     display:flex;
@@ -49,16 +52,16 @@ body {
     flex-wrap: wrap;
 }
 .pokemon{
-    width: 16.66%;
+    width: calc(16.66% - 10px);
     padding: 10px 5px;
+    margin: 0 5px;
+    margin-bottom: 10px;
     border-radius: 15px;
     box-shadow: #0000001a 0 4px 12px;
-    transition: all .25scubic-bezier(.02,.01,.47,1);
+    transition: all .25s ease-out;
 }
 .pokemon:hover {
     box-shadow: 0 5px 11px #0000002e, 0 4px 15px #00000026;
-    -webkit-transition: box-shadow .4sease-out;
-    transition: box-shadow .4sease-out;
 }
 .card{
     text-decoration: none;
@@ -72,6 +75,9 @@ body {
     font-size: 15px;
     color: #2C3E50;
     font-family: Inter,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.card img{
+    width:100%;
 }
 .pokemon-name{
     font-family: Inter,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -127,6 +133,39 @@ body {
 .label.fairy{
     background-color: #d685ad;
 }
+.label.psychic{
+    background-color: #f95587;
+}
+.label.water{
+    background-color: #6390f0;
+}
+.label.rock{
+    background-color: #b6a136;
+}
+.label.dark{
+    background-color: #705746;
+}
+.label.dragon{
+    background-color: #6f35fc;
+}
+.label.ghost{
+    background-color: #735797;
+}
+.label.flying{
+    background-color: #a98ff3;
+}
+.label.bug{
+    background-color: #a6b91a;
+}
+.label.fighting{
+    background-color: #c22e28;
+}
+.label.ice{
+    background-color: #96d9d6;
+}
+.label.steel{
+    background-color: #b7b7ce;
+}
 .load{
     display:flex;
     flex-direction: column;
@@ -144,4 +183,7 @@ body {
     color: #fff;
     background-color: #ff4d4f;
     transition: all .25s cubic-bezier(.02,.01,.47,1);
+}
+.load_button:hover {
+    background-color: #ff7875;
 }
